Add flash effect to name, animation to pointer and border colour to images + extra image added

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
         <div class="small-image-container">
           <img src="img/small-image-3.jpg">
         </div>
+        <div class="small-image-container">
+          <img src="img/small-image-4.jpg">
+        </div>
         <div class="big-image-container">
           <img src="img/big-image.png">
           <div class="zig-zags">
@@ -59,6 +62,7 @@
             <div class="zig-zag"></div>
             <div class="zig-zag"></div>
           </div>
+<!--          <div class="zig-zags-overlay"></div>-->
         </div>
       </div>
       <div class="intro-text-container">
