Switch up images (added in flowers + cake)

--- a/index.html
+++ b/index.html
@@ -40,17 +40,27 @@
           <img src="img/small-image-1.png">
         </div>
         <div class="small-image-container">
+          <img src="img/daffodills.jpg">
+        </div>
+        <div class="small-image-container">
           <img src="img/small-image-2.png">
         </div>
         <div class="small-image-container">
-          <img src="img/small-image-3.jpg">
-        </div>
-        <div class="small-image-container">
-          <img src="img/small-image-4.jpg">
+          <img src="img/cake-by-sweetie.jpg">
         </div>
         <div class="big-image-container">
           <img src="img/big-image.png">
           <div class="zig-zags">
+            <div class="zig-zag"></div>
+            <div class="zig-zag"></div>
+            <div class="zig-zag"></div>
+            <div class="zig-zag"></div>
+            <div class="zig-zag"></div>
+            <div class="zig-zag"></div>
+            <div class="zig-zag"></div>
+            <div class="zig-zag"></div>
+            <div class="zig-zag"></div>
+            <div class="zig-zag"></div>
             <div class="zig-zag"></div>
             <div class="zig-zag"></div>
             <div class="zig-zag"></div>
